00_backups/playground/minikube/nakadi/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nakadi-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "nakadi-ui.192-168-49-2.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nakadi
                port:
                  name: ui
#                  number: 3000
